# matpod

./: .gitignore  .gitmodules  README.md  matpod_config.h.orig  platformio.ini
sim/: CMakeLists.txt  ledsim.cpp  matsim_main.cpp  serversim.cpp  serversim.h  servos_sim.cpp  servosim.cpp  servosim.h  wifisim.cpp
sim/fakelibs/: Arduino.h
src/: commandparser.cpp  commandparser.h  constants.h  control.cpp  control.h  htmlpages.h  idlecycle.cpp  idlecycle.h  led.cpp  led.h  legangles.h  main.cpp  server.cpp  server.h  servos.cpp  servos.h  sharedvalues.cpp  sharedvalues.h  strview.h  testprograms.cpp  testprograms.h  udp.cpp  udp.h  utils.h  walkcycle.cpp  walkcycle.h  wifi.cpp  wifi.h
